lib/kyverno/policies/baseline/disallow-privileged-containers.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-containers
  annotations:
    policies.kyverno.io/title: Disallow Privileged Containers
    policies.kyverno.io/category: Pod Security Standards (Baseline)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Privileged mode disables most security mechanisms and must not be allowed.
      This policy ensures Pods do not call for privileged mode.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: privileged-containers
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: >-
          Privileged mode is disallowed. The fields
          spec.containers[*].securityContext.privileged,
          spec.initContainers[*].securityContext.privileged, and
          spec.ephemeralContainers[*].securityContext.privileged must be unset or
          set to `false`.
        pattern:
          spec:
            "=(ephemeralContainers)":
              - "=(securityContext)":
                  "=(privileged)": "false"
            "=(initContainers)":
              - "=(securityContext)":
                  "=(privileged)": "false"
            containers:
              - "=(securityContext)":
                  "=(privileged)": "false"
